package com.dino;

import java.util.List;

public class GameBoard {
    private List<Tecton> tectons;

    public void generateBoard() {}

    public List<Tecton> getNeighbours() {
        throw new UnsupportedOperationException("Not supported yet.");
    }

    public void breakHandler() {}
}
