public class SlowingEffect extends Spore {
    public SlowingEffect() { this.nutrientValue = 2; }
    public void applyTo(Insect i) { }
}

